--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dotenv": "^0.1.3",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
