--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
