--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "firebase": "^10.10.0",
     "flowbite-react": "^0.8.0",
     "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next-router-mock": "^0.9.13",
+    "react": "^18.2.0",
+    "react-client-only": "^1.0.2",
+    "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.0.1",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.22.3",
+    "sharp": "^0.33.3"
+
   },
   "devDependencies": {
     "@types/node": "^20",
