--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "cors": "^2.8.5",
     "firebase": "^10.10.0",
     "flowbite-react": "^0.8.0",
@@ -22,7 +23,6 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "sharp": "^0.33.3"
-
   },
   "devDependencies": {
     "@types/node": "^20",
